edited texted in readme

--- a/cleaning_and_analysis/cleaning_curves.Rmd
+++ b/cleaning_and_analysis/cleaning_curves.Rmd
@@ -10,11 +10,9 @@ library(tidyverse)
 library(ggpubr)
 library(mgcv)
 library(qgam)
-
 library(tseries) # for autocorrelation function 
-
-library("grid")
-library("ggplotify")
+library(grid)
+library(ggplotify)
 
 ```
 
